# mlflow

./: .bandit  .dockerignore  .editorconfig  .env  .flake8  .gitattributes  .gitignore  .isort.cfg  .pre-commit-config.yaml  CLAUDE.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Dockerfile  Dockerfile-alpine  Dockerfile-debian  Dockerfile.alpine  Dockerfile.debian  LICENSE  README.md  artifacthub-repo.yml  bandit.yaml  docker-compose.aws-mssql-test.yaml  docker-compose.aws-mysql-test.yaml  docker-compose.aws-postgres-test.yaml  docker-compose.aws-test.yaml  docker-compose.azure-mssql-test.yaml  docker-compose.azure-mysql-test.yaml  docker-compose.azure-postgres-test.yaml  docker-compose.azure-test.yaml  docker-compose.basic-auth-ldap-ssl-test.yaml  docker-compose.basic-auth-ldap-test.yaml  docker-compose.basic-auth-mysql-test.yaml  docker-compose.basic-auth-postgres-test.yaml  docker-compose.basic-auth-test.yaml  docker-compose.gcp-mssql-test.yaml  docker-compose.gcp-mysql-test.yaml  docker-compose.gcp-postgres-test.yaml  docker-compose.gcp-test.yaml  docker-compose.oidc-auth-postgres-test.yaml  docker-compose.oidc-auth-redis-postgres-test.yaml  (+3 more)
.github/: CODEOWNERS  dependabot.yml
.github/workflows/: docker-publish.yml  dockerhub-description.yml
docs/hub/: README.md
mlflowstack/auth/: ldap.py
test-containers/azurite/: Dockerfile  create-container.js  run.sh
test-containers/basic-auth/: basic_auth.ini
test-containers/basic-auth/ldap/: basic_auth.ini
test-containers/basic-auth/ldap/group/: admin.json  user.json
test-containers/basic-auth/ldap/user/: admin1.json  user1.json  user2.json
test-containers/basic-auth/mysql/: basic_auth.ini
test-containers/oidc-auth/: keycloak-realm.json
tests/: certificates.py  conftest.py  extended_docker_compose.py  test_aws_cloud_integration.py  test_aws_cloud_mysql_integration.py  test_aws_cloud_postgres_integration.py  test_azure_cloud_integration.py  test_azure_cloud_mysql_integration.py  test_azure_cloud_postgres_integration.py  test_basic_auth_ldap_integration.py  test_basic_auth_ldap_ssl_integration.py  test_basic_auth_mysql_integration.py  test_basic_auth_postgres_integration.py  test_gcp_cloud_integration.py  test_gcp_cloud_mysql_integration.py  test_gcp_cloud_postgres_integration.py  test_mlflowstack.py
tests/helpers/: extended_docker_compose.py
tests/integration/: conftest.py  test_aws_cloud_mssql_integration.py  test_aws_cloud_mysql_integration.py  test_aws_cloud_postgres_integration.py  test_azure_cloud_mssql_integration.py  test_azure_cloud_mysql_integration.py  test_azure_cloud_postgres_integration.py  test_basic_auth_ldap_integration.py  test_basic_auth_ldap_ssl_integration.py  test_basic_auth_mysql_integration.py  test_basic_auth_postgres_integration.py  test_gcp_cloud_mssql_integration.py  test_gcp_cloud_mysql_integration.py  test_gcp_cloud_postgres_integration.py  test_oidc_auth_postgres_integration.py  test_oidc_auth_redis_postgres_integration.py
tests/unit/: test_lldap.py
