[project]
name = "mlflowstack"
description = "Mlflow with AWS, Azure Cloud, and GCP support."
dynamic = [ "version" ]
license = { file = "LICENSE" }
readme = "README.md"
requires-python = ">=3.12"
package-mode = true
packages = [{ include = "mlflowstack" }]
authors = [
    { name = "Burak Ince", email = "burak.ince@linux.org.tr" },
]
dependencies = [
  "mlflow[auth,extras,pipelines] (>=2.21.3,<3.0.0)",
  "pymysql (>=1.1.1,<2.0.0)",
  "psycopg2-binary (>=2.9.10,<3.0.0)",
  "boto3 (>=1.37.33,<2.0.0)",
  "sqlalchemy (>=2.0.40,<3.0.0)",
  "google-cloud-storage (>=3.1.0,<4.0.0)",
  "azure-storage-blob (>=12.25.1,<13.0.0)",
  "ldap3 (>=2.9.1,<3.0.0)"
]

[tool.poetry]
requires-poetry = ">=2.0"
version = "1.0"

[tool.poetry.dependencies]
python = ">=3.12,<4.0"

[tool.poetry.group.dev.dependencies]
pytest = "^8.3.4"
testcontainers = "^4.9.0"
requests = "^2.32.3"
cloudpickle = "^3.1.0"
pre-commit = "^4.0.1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
