[project]
name = "mlflowstack"
description = "Mlflow with AWS, Azure Cloud, and GCP support."
dynamic = [ "version" ]
readme = "README.md"
requires-python = ">=3.13"
package-mode = true
packages = [{ include = "mlflowstack" }]
authors = [
    { name = "Burak Ince", email = "burak.ince@linux.org.tr" },
]
dependencies = [
  "mlflow[auth,pipelines] (>=3.14.0,<4.0.0)",
  "pymysql (>=1.2.0,<2.0.0)",
  "psycopg2-binary (>=2.9.12,<3.0.0)",
  "boto3 (>=1.43.39,<2.0.0)",
  "sqlalchemy (>=2.0.51,<3.0.0)",
  "google-cloud-storage (>=3.12.0,<4.0.0)",
  "azure-storage-blob (>=12.30.0,<13.0.0)",
  "ldap3 (>=2.9.1,<3.0.0)",
  "pymssql (>=2.3.13,<3.0.0)",
  "urllib3 (>=2.7.0,<3.0.0)",
  "mlflow-oidc-auth[cache] (>=7.3.1,<8.0.0)",
  "prometheus-flask-exporter (>=0.23.2,<0.24.0)",
  "requests-auth-aws-sigv4 (>=0.7,<0.8)",
  "pysftp (>=0.2.9,<0.3.0)"
]

[tool.poetry]
requires-poetry = ">=2.0"
version = "1.0"

[tool.poetry.dependencies]
python = ">=3.13,<4.0"

[tool.poetry.group.dev.dependencies]
pytest = "^9.1.1"
testcontainers = "^4.14.2"
requests = "^2.34.2"
cloudpickle = "^3.1.2"
pre-commit = "^4.6.0"
pytest-mock = "^3.15.1"
redis = "^5.0.0"

[tool.pytest.ini_options]
markers = [
  "amd64_only: mark test to run only on amd64 architecture",
]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
